@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.32 2003/10/03 09:17:21 jaco Exp $
+# $Id: CHANGELOG,v 1.33 2003/10/03 09:51:01 jaco Exp $
 
 * Fri, Oct 03, 2003, 0.5.6-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -82,6 +82,7 @@
       - Removed the isolinux.cfg file, it is generated dynamically
         now to cater for trhe mklivecd options
       - Added '--iso-bootkey=<key>,<msg>' option
+      - Be less verbose by default, '--verbose' option works now
     [mklivecd.spec]:
       - Synced with contrib spec
       - Ability to auto-generate version info for changelog
